--- a/index.html
+++ b/index.html
@@ -588,14 +588,14 @@
                       <span>bootstrap</span>
                       <h3>
                         <a
-                          href="projects/vei website/index.html"
+                          href="vei website/index.html"
                           target="_blank"
                           >vei institute</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/vei website/index.html"
+                      href="vei website/index.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -621,13 +621,13 @@
                     <div>
                       <span>JavaScript</span>
                       <h3>
-                        <a href="projects/Calculator/calc.html" target="_blank"
+                        <a href="Calculator/calc.html" target="_blank"
                           >calculator</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/Calculator/calc.html"
+                      href="Calculator/calc.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -654,14 +654,14 @@
                       <span>javscript</span>
                       <h3>
                         <a
-                          href="projects/Digital Clock/digital_clock2.html"
+                          href="Digital Clock/digital_clock2.html"
                           target="_blank"
                           >digital clock</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/Digital Clock/digital_clock2.html"
+                      href="Digital Clock/digital_clock2.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -687,13 +687,13 @@
                     <div>
                       <span>bootstrap</span>
                       <h3>
-                        <a href="projects/The Cappa/index.html" target="_blank"
+                        <a href="The Cappa/index.html" target="_blank"
                           >the cappa</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/The Cappa/index.html"
+                      href="The Cappa/index.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -720,14 +720,14 @@
                       <span>javscript</span>
                       <h3>
                         <a
-                          href="projects/Stopwatch/stopwatch.html"
+                          href="Stopwatch/stopwatch.html"
                           target="_blank"
                           >stopwatch</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/Stopwatch/stopwatch.html"
+                      href="Stopwatch/stopwatch.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -783,14 +783,14 @@
                       <span>html/css</span>
                       <h3>
                         <a
-                          href="projects/BAUEN Website/index.html"
+                          href="BAUEN Website/index.html"
                           target="_blank"
                           >buaen website</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/BAUEN Website/index.html"
+                      href="BAUEN Website/index.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -817,14 +817,14 @@
                       <span>javscript</span>
                       <h3>
                         <a
-                          href="projects/CRUD/studentRecord.html"
+                          href="CRUD/studentRecord.html"
                           target="_blank"
                           >student crud</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/CRUD/studentRecord.html"
+                      href="CRUD/studentRecord.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -851,14 +851,14 @@
                       <span>JavaScript</span>
                       <h3>
                         <a
-                          href="projects/Countdown/countdown.html"
+                          href="Countdown/countdown.html"
                           target="_blank"
                           >countdown</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/Countdown/countdown.html"
+                      href="Countdown/countdown.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -913,13 +913,13 @@
                     <div>
                       <span>bootstrap</span>
                       <h3>
-                        <a href="projects/Fam Studio/index.html" target="_blank"
+                        <a href="Fam Studio/index.html" target="_blank"
                           >fam studio</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/Fam Studio/index.html"
+                      href="Fam Studio/index.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -975,14 +975,14 @@
                       <span>JavaScript</span>
                       <h3>
                         <a
-                          href="projects/music-player/index.html"
+                          href="music-player/index.html"
                           target="_blank"
                           >music player</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/music-player/index.html"
+                      href="music-player/index.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -1009,14 +1009,14 @@
                       <span>html/css</span>
                       <h3>
                         <a
-                          href="projects/Fam Photography/index.html"
+                          href="Fam Photography/index.html"
                           target="_blank"
                           >fam photography</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/Fam Photography/index.html"
+                      href="Fam Photography/index.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -1043,14 +1043,14 @@
                       <span>JavaScript</span>
                       <h3>
                         <a
-                          href="projects/Tip Calculator/tip_cal.html"
+                          href="Tip Calculator/tip_cal.html"
                           target="_blank"
                           >tip calculator</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/Tip Calculator/tip_cal.html"
+                      href="Tip Calculator/tip_cal.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -1076,13 +1076,13 @@
                     <div>
                       <span>html/css</span>
                       <h3>
-                        <a href="projects/Cafephile/index.html" target="_blank"
+                        <a href="Cafephile/index.html" target="_blank"
                           >cafephile website</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/Cafephile/index.html"
+                      href="Cafephile/index.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -1109,14 +1109,14 @@
                       <span>javscript</span>
                       <h3>
                         <a
-                          href="projects/Form Val Onkeyup/formVal.html"
+                          href="Form Val Onkeyup/formVal.html"
                           target="_blank"
                           >form validation</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/Form Val Onkeyup/formVal.html"
+                      href="Form Val Onkeyup/formVal.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -1171,11 +1171,11 @@
                     <div>
                       <span>javscript</span>
                       <h3>
-                        <a href="projects/Counter/counter.html" target="_blank">counter</a>
+                        <a href="Counter/counter.html" target="_blank">counter</a>
                       </h3>
                     </div>
                     <a
-                      href="projects/Counter/counter.html" target="_blank"
+                      href="Counter/counter.html" target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
                       <i class="bx bxs-arrow-to-right"></i>
@@ -1201,14 +1201,14 @@
                       <span>bootstrap</span>
                       <h3>
                         <a
-                          href="projects/cadtraininginstitute/index.html"
+                          href="cadtraininginstitute/index.html"
                           target="_blank"
                           >cti website</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/cadtraininginstitute/index.html"
+                      href="cadtraininginstitute/index.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
@@ -1235,14 +1235,14 @@
                       <span>javascript</span>
                       <h3>
                         <a
-                          href="projects/image-silder/index2.html"
+                          href="image-silder/index2.html"
                           target="_blank"
                           >image slider</a
                         >
                       </h3>
                     </div>
                     <a
-                      href="projects/image-silder/index2.html"
+                      href="image-silder/index2.html"
                       target="_blank"
                       class="icon d-flex justify-content-center align-items-center"
                     >
